--- a/Core/templates/components/leftSidebar.html
+++ b/Core/templates/components/leftSidebar.html
@@ -18,7 +18,18 @@
                         <span key="t-layouts">الرئيسية</span>
                     </a>
                    
-                       
+                    <ul class="sub-menu" aria-expanded="false">
+                        
+                        <li><a href="ecommerce-products.html" key="t-products"><i class='bx bx-list-ul' ></i>
+                            التقارير  </a></li>
+
+                        <li><a href="ecommerce-product-detail.html" key="t-product-detail"> <i class='bx bxs-add-to-queue'></i>
+                        اضافة موديل جديد</a></li>
+
+                        <li><a href="ecommerce-product-detail.html" key="t-product-detail"> <i class='bx bx-trash'></i>
+                            سلة المهملاات</a></li>
+                        
+                    </ul>
 
                        
                 </li>
