--- a/Auth/templates/login.html
+++ b/Auth/templates/login.html
@@ -37,19 +37,34 @@
                 <div class="row justify-content-center">
                     <div class="col-md-8 col-lg-6 col-xl-5">
                         <div class="card overflow-hidden">
-                           
                             <div class="card-body pt-0 "> 
-                                <div class="justify-content-center">
-                                    <a href="index.html">
-                                        <div class="avatar-md profile-user-wid mt-4 ">
-                                            <span class="avatar-title rounded-circle bg-light">
-                                                <img src="/static/assets/images/dawnberglogo.png" alt="" class="rounded-circle" height="34">
-                                            </span>
-                                        </div>
-                                    </a>
-                                </div>
 
-                                <div class="p-2">
+
+                                <div class="row mt-5 ">
+                                    <div class="col-lg-12 d-flex justify-content-center">
+                                        <a href="index.html">
+                                            <div class="avatar-md profile-user-wid  ">
+                                                <span class="avatar-title rounded-circle bg-light">
+                                                    <img src="/static/assets/images/dawnberglogo.png" alt="" class="rounded-circle" height="50">
+                                                </span>
+                                            </div>
+                                        </a>
+                                    
+                                    </div>
+
+
+                                    </div>
+
+                                    <div class="row mt-3">
+                                        <div class="col-lg-12 d-flex justify-content-center">
+                                            <h4>نظام المهدي لإدارة مصانع التريكو</h4>
+
+                                        </div>
+                                    </div>
+    
+                               
+                                
+                                <div class="p-2 mt-4">
                                     <form class="form-horizontal" method="POST">
                                             {% csrf_token %}
                                             
