--- a/Core/templates/components/header.html
+++ b/Core/templates/components/header.html
@@ -6,7 +6,7 @@
             <div class="navbar-brand-box">
                 <a href="index.html" class="logo logo-dark">
                     <span class="logo-sm">
-                        <img src="/static/assets/images/logo.svg" alt="" height="22">
+                        <img src="/static/assets/images/logo.png" alt="" height="22">
                     </span>
                     <span class="logo-lg">
                         <img src="/static/assets/images/logo-dark.png" alt="" height="17">
@@ -15,7 +15,7 @@
 
                 <a href="index.html" class="logo logo-light">
                     <span class="logo-sm">
-                        <img src="/static/assets/images/logo-light.svg" alt="" height="22">
+                        <img src="/static/assets/images/logo.png" alt="" height="22">
                     </span>
                     <span class="logo-lg">
                         <img src="/static/assets/images/logo-light.png" alt="" height="19">
@@ -35,137 +35,9 @@
                 </div>
             </form>
 
-        <!-- mega menu -->
-            <!-- <div class="dropdown dropdown-mega d-none d-lg-block ml-2">
-                <button type="button" class="btn header-item waves-effect" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-                    <span key="t-megamenu">Mega Menu</span>
-                    <i class="mdi mdi-chevron-down"></i> 
-                </button>
-                <div class="dropdown-menu dropdown-megamenu">
-                    <div class="row">
-                        <div class="col-sm-8">
-
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <h5 class="font-size-14 mt-0" key="t-ui-components">UI Components</h5>
-                                    <ul class="list-unstyled megamenu-list">
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-lightbox">Lightbox</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-range-slider">Range Slider</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-sweet-alert">Sweet Alert</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-rating">Rating</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-forms">Forms</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-tables">Tables</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-charts">Charts</a>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                                <div class="col-md-4">
-                                    <h5 class="font-size-14 mt-0" key="t-applications">Applications</h5>
-                                    <ul class="list-unstyled megamenu-list">
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-ecommerce">Ecommerce</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-calendar">Calendar</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-email">Email</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-projects">Projects</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-tasks">Tasks</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-contacts">Contacts</a>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                                <div class="col-md-4">
-                                    <h5 class="font-size-14 mt-0" key="t-extra-pages">Extra Pages</h5>
-                                    <ul class="list-unstyled megamenu-list">
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-light-sidebar">Light Sidebar</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-compact-sidebar">Compact Sidebar</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-horizontal">Horizontal layout</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-maintenance">Maintenance</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-coming-soon">Coming Soon</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-timeline">Timeline</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-faqs">FAQs</a>
-                                        </li>
-                
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <h5 class="font-size-14 mt-0" key="t-ui-components">UI Components</h5>
-                                    <ul class="list-unstyled megamenu-list">
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-lightbox">Lightbox</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-range-slider">Range Slider</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-sweet-alert">Sweet Alert</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-rating">Rating</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-forms">Forms</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-tables">Tables</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" key="t-charts">Charts</a>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                                <div class="col-sm-5">
-                                    <div>
-                                        <img src="/static/assets/images/megamenu-img.png" alt="" class="img-fluid mx-auto d-block">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div> -->
+        
+           
+             
         </div>
 
         <div class="d-flex">
@@ -287,22 +159,23 @@
                 </div>
             </div>
 
+            <!-- user item -->
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img class="rounded-circle header-profile-user" src="/static/assets/images/users/avatar-1.jpg"
                         alt="Header Avatar">
-                    <span class="d-none d-xl-inline-block ml-1" key="t-henry">Henry</span>
+                    <span class="d-none d-xl-inline-block ml-1" key="t-henry">{{request.user}}</span>
                     <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
                     <!-- item-->
-                    <a class="dropdown-item" href="#"><i class="bx bx-user font-size-16 align-middle mr-1"></i> <span key="t-profile">Profile</span></a>
-                    <a class="dropdown-item" href="#"><i class="bx bx-wallet font-size-16 align-middle mr-1"></i> <span key="t-my-wallet">My Wallet</span></a>
-                    <a class="dropdown-item d-block" href="#"><span class="badge badge-success float-right">11</span><i class="bx bx-wrench font-size-16 align-middle mr-1"></i> <span key="t-settings">Settings</span></a>
-                    <a class="dropdown-item" href="#"><i class="bx bx-lock-open font-size-16 align-middle mr-1"></i> <span key="t-lock-screen">Lock screen</span></a>
+                    <a class="dropdown-item" href="#"><i class="bx bx-user font-size-16 align-middle mr-1"></i> <span key="t-profile">الصفحة الشخصية</span></a>
+                    <a class="dropdown-item" href="#"><i class="bx bx-wallet font-size-16 align-middle mr-1"></i> <span key="t-my-wallet">الخزينة</span></a>
+                    <a class="dropdown-item d-block" href="#"><span class="badge badge-success float-right">11</span><i class="bx bx-wrench font-size-16 align-middle mr-1"></i> <span key="t-settings">الاعدادت</span></a>
+                    <a class="dropdown-item" href="#"><i class="bx bx-lock-open font-size-16 align-middle mr-1"></i> <span key="t-lock-screen">قفل الشاشة</span></a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-danger" href="#"><i class="bx bx-power-off font-size-16 align-middle mr-1 text-danger"></i> <span key="t-logout">Logout</span></a>
+                    <a class="dropdown-item text-danger" href="{% url 'Auth:logout'%}"><i class="bx bx-power-off font-size-16 align-middle mr-1 text-danger"></i> <span key="t-logout">تسجيل الخروج</span></a>
                 </div>
             </div>
 
