--- a/Core/templates/components/main.html
+++ b/Core/templates/components/main.html
@@ -914,11 +914,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <script>document.write(new Date().getFullYear())</script> © Skote.
+                    <script>document.write(new Date().getFullYear())</script> © Mahdy.
                 </div>
                 <div class="col-sm-6">
                     <div class="text-sm-right d-none d-sm-block">
-                        Design & Develop by Themesbrand
+                        Design & Develop by Ahmed Elmahdy
                     </div>
                 </div>
             </div>
