add list for factories

--- a/Core/templates/components/leftSidebar.html
+++ b/Core/templates/components/leftSidebar.html
@@ -89,7 +89,7 @@
                     </a>
                     <ul class="sub-menu" aria-expanded="false">
                         
-                        <li><a href="ecommerce-products.html" key="t-products"><i class='bx bx-list-ul' ></i>
+                        <li><a href="{% url 'Factories:factory_list' %}" key="t-products"><i class='bx bx-list-ul' ></i>
                             قائمة المصانع </a></li>
 
                         <li><a href="ecommerce-product-detail.html" key="t-product-detail"> <i class='bx bxs-add-to-queue'></i>
