--- a/Core/templates/base.html
+++ b/Core/templates/base.html
@@ -30,7 +30,7 @@
     
     
     
-    <body data-sidebar="dark">
+    <body data-sidebar="dark" >
 
     <!-- <body data-layout="horizontal" data-topbar="dark"> -->
 
@@ -57,7 +57,23 @@
            {% block main %}
              
            {% endblock main %} 
-         
+            
+        
+        {% block model %}
+            <div class="modal fade" id="sub_modal">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content" id="sub_body">
+                            <span class="float-left">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </span>
+        
+                    </div>
+                </div>
+            </div>
+        {% endblock model %}
+            
+
+    
            
             <!-- end main content-->
 
