--- a/Factories/templates/Factories/factory_list.html
+++ b/Factories/templates/Factories/factory_list.html
@@ -89,7 +89,9 @@
                                         <div class="col-lg-12 d-flex justify-content-center  mt-3">
                                             <div class="media-body ">
                                                 <div class="d-flex justify-content-center ">
+                                                  <a href="{% url 'Factories:FactoryDetail' x.id %}">
                                                     <h5 class="text-truncate font-size-15">{{x.name}}</h5>
+                                                  </a>  
                                                     
                                                 </div>
                                                
